Update the date format

--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -18,7 +18,8 @@
                 </div>
 
                 <div class="col-third" style="text-align: right;">
-                    <h2> <span id="date"></span> </h2>
+                    <h1 class='thin'> <span id="date-p1"></span> </h1>
+                    <h2 class='thin'> <span id="date-p2"></span></h2>
                 </div>
             </div>
 
