--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body onload="startTime()">
+    <body onload="start()">
         
         <div class="main">
             <div class="cols">
