Get weather working (mostly) (i still need to update to new icons, use apis icon codes rather than weather name summery, and get each one working (currenly the numbers seem wrong and the icons are all the same, TL;DR GetWeather() weatherToIcon(w) and startWeather(w) now work, just need some logic changes to get values to be coorect :)

--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -26,34 +26,34 @@
             <div class="bottom">
                 <div class="cols">
                     <div class="col-third">
-                        <h1 class="thin" id = "temp-one"></h1>
-                        <h2 class="thin" id = "wind-speed-one"></h2>
-                        <h3 id = "location"></h3>
+                        <h1 class="thin" id = "tempnow"></h1>
+                        <h2 class="thin" id = "windspeedone"></h2>
+                        <h2 id = "location"></h2>
                     </div>
                     <div class="col-two-thirds">
                         <div class="cols">
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-one"></h2>
-                                    <h1 id="icon-one"></h1>
-                                <h3 id = "temp-one"></h3>
+                                    <h1 id="iconone"></h1>
+                                <h4 id = "tempone"></h4>
                             </div>
 
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-two"></h2>
-                                    <h1 id="icon-two"></h1>
-                                <h4 id = "temp-two"></h4>
+                                    <h1 id="icontwo"></h1>
+                                <h4 id = "temptwo"></h4>
                             </div>
 
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-three"></h2>
-                                <h1 id="icon-three"></h1>
-                                <h4 id = "temp-three"></h4>
+                                <h1 id="iconthree"></h1>
+                                <h4 id = "tempthree"></h4>
                             </div>
                             
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-four"></h2>
-                                    <h1 id="icon-four"></h1>
-                                <h4 id = "temp-four"></h4>
+                                    <h1 id="iconfour"></h1>
+                                <h4 id = "tempfour"></h4>
                             </div>
                         </div>
                     </div>
