--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -52,7 +52,7 @@
                             
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-four"></h2>
-                                    <h1 id="iconfour"></h1>
+                                    <h1 id="iconfourr"></h1>
                                 <h4 id = "tempfour"></h4>
                             </div>
                         </div>
@@ -65,4 +65,6 @@
     <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/darksky.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html> 
