--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -20,6 +20,7 @@
                 <div class="col-third" style="text-align: right;">
                     <h1 class='thin'> <span id="datep1"></span> </h1>
                     <h2 class='thin'> <span id="datep2"></span></h2>
+                    <a href="" data-icon="A"></a>
                 </div>
             </div>
 
