--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -20,7 +20,6 @@
                 <div class="col-third" style="text-align: right;">
                     <h1 class='thin'> <span id="datep1"></span> </h1>
                     <h2 class='thin'> <span id="datep2"></span></h2>
-                    <a href="" data-icon="A"></a>
                 </div>
             </div>
 
@@ -36,7 +35,7 @@
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-one"></h2>
                                     <h1 id="iconone"></h1>
-                                <h4 id = "tempone"></h4>
+                                <h2 id = "tempone"><span class="low" id="tempOneLow"></span></h2>
                             </div>
 
                             <div class="col-fifth center">
