--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -41,19 +41,19 @@
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-two"></h2>
                                     <h1 id="icontwo"></h1>
-                                    <h2 id = "tempone"><span class="low" id="tempOneLow"></span></h2>
+                                    <h2 id = "temptwo"><span class="low" id="tempTwoLow"></span></h2>
                             </div>
 
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-three"></h2>
                                 <h1 id="iconthree"></h1>
-                                <h2 id = "tempone"><span class="low" id="tempOneLow"></span></h2>
+                                <h2 id = "tempthree"><span class="low" id="tempThreeLow"></span></h2>
                             </div>
                             
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-four"></h2>
                                     <h1 id="iconfourr"></h1>
-                                    <h2 id = "tempone"><span class="low" id="tempOneLow"></span></h2>
+                                    <h2 id = "tempfourne"><span class="low" id="tempFourLow"></span></h2>
                             </div>
                         </div>
                     </div>
