--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -53,7 +53,7 @@
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-four"></h2>
                                     <h1 id="iconfourr"></h1>
-                                    <h2 id = "tempfourne"><span class="low" id="tempFourLow"></span></h2>
+                                    <h2 id = "tempfour"><span class="low" id="tempFourLow"></span></h2>
                             </div>
                         </div>
                     </div>
