Move to darksky api, update image, more changes

--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -26,34 +26,34 @@
             <div class="bottom">
                 <div class="cols">
                     <div class="col-third">
-                        <h1 class="thin" id = "tempnow"></h1>
+                        <h1><span class="thin" style="margin-right: 35px;" id = "tempnow"></span><span id= 'iconnow'></span></span></h1>
+                        <h2><span class="thin" style="margin-right: 35px;" id = "suntime"></span><span id= 'sunicon'></span></span></h2>
                         <h2 class="thin" id = "windspeedone"></h2>
-                        <h2 id = "location"></h2>
                     </div>
                     <div class="col-two-thirds">
                         <div class="cols">
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-one"></h2>
                                     <h1 id="iconone"></h1>
-                                <h2><span id="tempone" style="margin-right: 35px;"></span><span class="low" id="tempOneLow"></span></h2>
+                                <h2><span id="tempone" style="margin-right: 35px;"></span><span class="low" id="temponelow"></span></h2>
                             </div>
 
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-two"></h2>
                                     <h1 id="icontwo"></h1>
-                                    <h2><span id="temptwo" style="margin-right: 35px;"></span><span class="low" id="tempTwoLow"></span></h2>
+                                    <h2><span id="temptwo" style="margin-right: 35px;"></span><span class="low" id="temptwolow"></span></h2>
                             </div>
 
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-three"></h2>
                                 <h1 id="iconthree"></h1>
-                                <h2><span id="tempthree" style="margin-right: 35px;"></span><span class="low" id="tempThreeLow"></span></h2>
+                                <h2><span id="tempthree" style="margin-right: 35px;"></span><span class="low" id="tempthreelow"></span></h2>
                             </div>
                             
                             <div class="col-fifth center">
                                     <h2 class="thin" id="day-four"></h2>
-                                    <h1 id="iconfourr"></h1>
-                                    <h2><span id="tempfour" style="margin-right: 35px;"></span><span class="low" id="tempFourLow"></span></h2>
+                                    <h1 id="iconfour"></h1>
+                                    <h2><span id="tempfour" style="margin-right: 35px;"></span><span class="low" id="tempfourlow"></span></h2>
                             </div>
                         </div>
                     </div>
