Add sunrise/set time

--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -27,7 +27,7 @@
                 <div class="cols">
                     <div class="col-third">
                         <h1><span class="thin" style="margin-right: 35px;" id = "tempnow"></span><span id= 'iconnow'></span></span></h1>
-                        <h2><span class="thin" style="margin-right: 35px;" id = "suntime"></span><span id= 'sunicon'></span></span></h2>
+                        <h2><span style='font-size:25px' id= 'sunicon'></span><span class="thin" style="margin-right: 35px;" id = "suntime"></span></h2>
                         <h2 class="thin" id = "windspeedone"></h2>
                     </div>
                     <div class="col-two-thirds">
