Begin calender related functions

--- a/jarvis/dashboard/UI/index.html
+++ b/jarvis/dashboard/UI/index.html
@@ -22,7 +22,10 @@
                     <h2 class='thin'> <span id="datep2"></span></h2>
                 </div>
             </div>
-
+            <div class="middle">
+                <br></br>
+                <span id='events'></span>
+            </div>
             <div class="bottom">
                 <div class="cols">
                     <div class="col-third">
@@ -66,5 +69,6 @@
     <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
     <script src="js/main.js"></script>
     <script src="js/darksky.js"></script>
+    <script src="js/calender.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html> 
